editor-components/feature/feature32/feature32.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    .max-content {
        .wrapper {
            display: flex;
            flex-direction: column;
            gap: var(--gap-xl);

            .text-content {
                flex: 1;

                .subtitle,
                .title,
                .description,
                .button {
                    content: ""
                }
            }

            .features-content {
                flex: 1.5;
                gap: var(--composer-gap-lg);

                .card-container {
                    display: flex;
                    gap: var(--composer-gap-md);
                    align-items: center;

                    .icon-box {
                        display: flex;
                        justify-content: center;
                        align-items: center;
                        background-color: var(--composer-primary-color);
                        border-radius: var(--composer-border-radius-full);
                        padding: var(--padding-xl);
                        width: 80px;
                        height: 80px;

                        .card-icon {
                            font-size: 2.5rem;
                            color: var(--composer-font-color-secondary);
                            line-height: 0;
                            display: block;

                            &[src] {
                                width: 100%;
                                height: 100%;
                                object-fit: contain;
                                font-size: unset;
                            }
                        }
                    }

                    .card-content {
                        flex: 1;

                        .card-title {
                            color: var(--composer-font-color-primary);
                            text-align: left !important;

                        }

                        .card-description {
                            text-align: left !important;
                            color: var(--composer-tertiary-color);
                        }
                    }
                }
            }

            .button-container {
                gap: var(--composer-gap-md);
            }
        }
    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container {
        .max-content {
            .wrapper {
                flex-direction: column;
            }
        }
    }
}

