fix: In every viewport, the spacing between items should not exceed the padding

--- a/editor-components/feature/feature32/feature32.module.scss
+++ b/editor-components/feature/feature32/feature32.module.scss
@@ -71,6 +71,13 @@
 
             .button-container {
                 gap: var(--composer-gap-md);
+                flex-wrap: wrap;
+
+                .button {
+                    .button-text {
+                        content: "";
+                    }
+                }
             }
         }
     }
@@ -81,6 +88,10 @@
         .max-content {
             .wrapper {
                 flex-direction: column;
+
+                .features-content {
+                    gap: var(--composer-gap-md);
+                }
             }
         }
     }
